Revision history for Perl extension PGXN::API

0.7.0

0.6.9   2011-03-29T04:43:53
      - Fixed option processing in `pgxn_api.psgi` so that it deals only with
        the options we care about. Otherwise it fails to start when running
        under Starman.

0.6.8   2011-03-29T04:18:30
      - Added X-PGXN-API-Version header to all HTTP responses.
      - Added required `errors_to` and `errors_from` parameters to the router.
      - Added required `errors_to` and `errors_from` options to
        `pgxn_api.psgi`, as well as the `doc_root` option.
      - Added the `--root` option to `pgxn_api_sync`.

0.6.7   2011-03-29T02:18:01
      - Moved the doc path in the extension JSON file under the release status
        key.

0.6.6   2011-03-29T01:13:48
      - Changed `{+path}` in the doc URI template to `{+doc}`, since that
        will be more meaningful in other contexts.
      - Added the `doc` key to the `provides` hashes in the distribution
        metadata. It contains the doc path (as used by the doc URI template)
        to the doc with the same base name as the provided extension.
      - Added the `doc` key to the extension search index, so it's easy to
        link to the documentation page from extension search results.

0.6.5   2011-03-28T03:57:52
      - The search API no longer fails when only "q" query parameter is
        passed.
      - Added a 500 error handler that sends an email on error.

0.6.4   2011-03-28T03:07:13
      - Updated for PGXN::API::Searcher v0.6.1. 
      - Now only one search URL, `/search`. The index is specified via the
        `in` query parameter.

0.6.3   2011-03-28T02:08:01
      - Updated for new URI template names in PGXN::Manager v0.10.4.
      - Updated tests for new default metadata URI template paths.

0.6.2   2011-03-26T05:29:36
      - Search requests go to /search instead of /by. The latter is used for
        metadata files.
      - Fixed another "Use of uninitialized value in subroutine entry" warning